--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </script>
 
     </div>
-    <div class="refresh" onclick="sendPostRequest()"><img id="imgRefresh" src="/refresh.png"></div>
+    <div class="refresh"></div>
 
 
 </body>
