update margin for mobile

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
             /* Add smooth transition effect */
         }
 
-        @media (max-width: 800px) {
+        @media (max-width: 500px) {
             .battery-container {
                 width: 160px;
                 right: 40px;
                 margin-right: 20vw;
                 scale: 1;
-                margin-top: 0;
+                margin-top: 5vh;
             }
 
             .battery-body {
@@ -165,6 +165,7 @@
                 margin-top: 120px;
                 margin-left: 7vw;
                 scale: 1.8;
+                margin-bottom: 5vh;
             }
         }
     </style>
