fix small issue with css

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             scale: 1.5;
             bottom: 30px;
             margin-left: 0.7vw;
+            margin-top: 10px;
         }
 
         .refresh {
