add new gestion of "RatioPC" variable

--- a/index.html
+++ b/index.html
@@ -243,21 +243,27 @@
                         operator = "-"
                     }
 
+
+                    var level = document.getElementById("level");
+                    if(RatioPC === "noData"){
+                        level.innerHTML = "--.--kW"
+                    }else{
                     RatioPC = Math.abs(RatioPC);
                     RatioPC = floor3(RatioPC);
                     console.log(batteryLevelPercentage);
                     updateBattery(batteryLevelPercentage * 100);
 
-                    var level = document.getElementById("level");
+                    
                     level.innerHTML = floor2(batteryLevel) + "kW"
 
                     var updateT = document.getElementById("updateTime");
                     updateT.innerHTML = update;
-
+                    }
+                    /*
                     if (RatioPC != 0) {
                         var producing = document.querySelector("body > div.battery-container > div.battery-body > span");
                         producing.innerHTML = operator + " " + RatioPC + "kW/h";
-                    }
+                    }*/
                 } catch (error) {
                     console.error(error);
                 }
