--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
                     var producing = document.querySelector("body > div.battery-container > div.battery-body > span");
                     if(RatioPC === "noData"){
-                        producing.innerHTML = "--.-- kW"
+                        producing.innerHTML = "--.-- kW/h"
                     }else{
                     RatioPC = Math.abs(RatioPC);
                     RatioPC = floor3(RatioPC);
