--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
     </div>
     <div class="detail">
     
-    <img src="/icon/SolarPanel.png" style="height: 20px; width: auto; display: inline-block;"><span id="produce"></span>
+    <img src="./icon/SolarPanel.png" style="height: 20px; width: auto; display: inline-block;"><span id="produce"></span>
     </br>
-    <img src="/icon/House.png"style="height: 20px; width: auto; display: inline-block;"><span id="consumption"></span>
+    <img src="./icon/House.png"style="height: 20px; width: auto; display: inline-block;"><span id="consumption"></span>
     
     </div>
 
